# gridex

./: .gitignore  Package.swift  README.md
.claude/: settings.local.json
linux/: CMakeLists.txt
linux/packaging/: RELEASE.md
linux/packaging/appimage/: build-appimage.sh
linux/src/Core/Enums/: DatabaseType.h  SQLDialect.h
linux/src/Core/Models/AI/: ChatGPTTokenBundle.h
linux/src/Data/: CMakeLists.txt
linux/src/Data/Adapters/: AdapterFactory.cpp
linux/src/Data/Adapters/ClickHouse/: ClickhouseAdapter.cpp  ClickhouseAdapter.h
linux/src/Data/Keychain/: SecretStore.h
linux/src/Presentation/Views/MCP/: MCPSetupView.cpp
linux/src/Presentation/Views/Settings/: SettingsDialog.cpp  SettingsDialog.h
linux/src/Presentation/Windows/Main/: MainWindow.cpp  MainWindow.h
linux/src/Services/: CMakeLists.txt
linux/src/Services/AI/: AIServiceFactory.cpp
linux/src/Services/AI/Auth/: ChatGPTOAuthConstants.h  ChatGPTOAuthService.cpp  ChatGPTOAuthService.h  JwtDecoder.cpp  JwtDecoder.h  OAuthLoopbackServer.cpp  OAuthLoopbackServer.h  PKCE.cpp  PKCE.h
linux/src/Services/AI/Providers/: ChatGPTProvider.cpp  ChatGPTProvider.h
linux/src/Services/MCP/: MCPServer.cpp
linux/src/Services/Update/: UpdateService.cpp  UpdateService.h
macos/App/DependencyInjection/: DependencyContainer.swift
macos/App/Lifecycle/: AppDelegate.swift  GridexApp.swift  main.swift
macos/App/State/: AppState.swift
macos/Core/Enums/: ColorTag.swift  DatabaseType.swift  MCPConnectionMode.swift  MCPPermissionTier.swift  ProviderType.swift  SQLDialect.swift
macos/Core/Extensions/: DatabaseType+Explain.swift  NSTextView+PlainText.swift
macos/Core/Models/AI/: ChatGPTTokenBundle.swift
macos/Core/Models/Database/: ConnectionConfig.swift
macos/Core/Models/MCP/: MCPAuditEntry.swift  MCPProtocol.swift
macos/Core/Models/Query/: ExplainOptions.swift
macos/Data/Adapters/ClickHouse/: ClickHouseAdapter.swift  ClickHouseHTTPClient.swift
macos/Data/Adapters/MongoDB/: MongoDBAdapter.swift
macos/Data/Adapters/PostgreSQL/: PostgreSQLAdapter.swift
macos/Data/Keychain/: KeychainService.swift
macos/Data/Persistence/Models/: SavedConnectionEntity.swift
macos/Data/Persistence/Repositories/: SwiftDataConnectionRepository.swift
macos/Presentation/Views/AIChat/: AIChatView.swift
macos/Presentation/Views/ConnectionForm/: ConnectionFormPanel.swift  ConnectionFormView.swift
macos/Presentation/Views/DataGrid/: CreateTableView.swift  DataGridView.swift
macos/Presentation/Views/ERDiagram/: ERDiagramView.swift
macos/Presentation/Views/Main/: MainView.swift
macos/Presentation/Views/MongoDB/: MongoDocumentEditorSheet.swift
macos/Presentation/Views/QueryEditor/: QueryEditorView.swift  SQLTextView.swift
macos/Presentation/Views/Sidebar/: BackupRestorePanel.swift  SidebarView.swift
macos/Presentation/Views/TableList/: TableListView.swift
macos/Presentation/Windows/MCP/: MCPActivityView.swift  MCPAdvancedView.swift  MCPConnectionsView.swift  MCPOverviewView.swift  MCPSetupView.swift  MCPWindow.swift
macos/Presentation/Windows/Settings/: ProviderEditSheet.swift  SettingsView.swift
macos/Resources/: Info.plist
macos/Services/AI/: ProviderFactory.swift  ProviderRegistry.swift
macos/Services/AI/Auth/: ChatGPTOAuthConstants.swift  ChatGPTOAuthLoopbackServer.swift  ChatGPTOAuthService.swift  JWTDecoder.swift  PKCE.swift
macos/Services/AI/Providers/: ChatGPTProvider.swift
macos/Services/Export/: BackupService.swift
macos/Services/Import/: DBeaverImporter.swift  DataGripImporter.swift  ImportedConnection.swift  NavicatImporter.swift  TablePlusImporter.swift
macos/Services/MCP/: MCPServer.swift  MCPStatusBarController.swift
macos/Services/MCP/Audit/: MCPAuditLogger.swift
macos/Services/MCP/Security/: MCPApprovalGate.swift  MCPIdentifierValidator.swift  MCPPermissionEngine.swift  MCPRateLimiter.swift  MCPRowCountEstimator.swift  MCPSQLSanitizer.swift
macos/Services/MCP/Tools/: MCPTool.swift  MCPToolRegistry.swift
macos/Services/MCP/Tools/Tier1/: DescribeTableTool.swift  (+5 more)
macos/Services/MCP/Transport/: StdioTransport.swift
macos/Services/QueryEngine/: ConnectionManager.swift
macos/Tests/GridexTests/: ChatGPTOAuthServiceTests.swift  ChatGPTOAuthTests.swift  ConnectionRepositoryTests.swift  DatabaseTypeExplainTests.swift  ExplainOptionsTests.swift  ExplainOutputViewTests.swift  PostgreSQLAdapterIntegrationTests.swift  ProviderFactoryTests.swift  SSLModeFallbackTests.swift
scripts/: publish.sh  test-mcp.sh
windows/: README.md
windows/Gridex/: AiService.cpp  App.xaml.cpp  AppSettings.cpp  ClickHouseAdapter.cpp  ConnectionCard.cpp  ConnectionCard.xaml  ConnectionFormDialog.cpp  ConnectionFormDialog.xaml  ConnectionManager.cpp  DataGridView.cpp  DataGridView.h  DatabaseTypePickerDialog.cpp  DatabaseTypePickerDialog.xaml  Gridex.items.props  HomePage.cpp  HomePage.h  HomePage.xaml  MCPPage.cpp  MCPPage.h  MCPPage.idl  MCPPage.xaml  PostgreSQLAdapter.cpp  QueryEditorView.cpp  QueryEditorView.h  QueryEditorView.xaml  SettingsPage.cpp  SettingsPage.xaml  SidebarPanel.cpp  SidebarPanel.h  WorkspacePage.cpp  WorkspacePage.h
windows/Gridex/Models/: AiService.h  AppSettings.h  ChangeTracker.h  ChatGPTTokenBundle.h  ClickHouseAdapter.h  ConnectionConfig.h  ConnectionStore.h  DatabaseType.h  PostgreSQLAdapter.h
windows/Gridex/Models/Import/: ImportedConnection.h
windows/Gridex/Models/MCP/: MCPAuditEntry.h  MCPConnectionMode.h  MCPErrorCode.h  MCPPermissionTier.h  MCPProtocol.h  MCPServerInfo.h  MCPToolDefinition.h  MCPToolError.h
windows/Gridex/Services/: TrayIconService.cpp  TrayIconService.h
windows/Gridex/Services/ChatGPTOAuth/: ChatGPTOAuthConstants.h  ChatGPTOAuthService.cpp  ChatGPTOAuthService.h  JwtDecoder.cpp  JwtDecoder.h  PKCE.cpp  PKCE.h
windows/Gridex/Services/Import/: DBeaverImporter.cpp  DBeaverImporter.h  DataGripImporter.cpp  DataGripImporter.h  NavicatImporter.cpp  NavicatImporter.h  TablePlusImporter.cpp  TablePlusImporter.h
windows/Gridex/Services/MCP/: MCPConnectionPool.cpp  MCPConnectionPool.h  MCPServer.cpp  MCPServer.h  MCPServerHost.cpp  MCPServerHost.h
(+61 files in other folders)
